# cloakbrowser

./: .dockerignore  .gitignore  BINARY-LICENSE.md  CHANGELOG.md  README.md  Velas Component Colors.dc.html  build.ps1  flake.nix  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
benchmarks/: __init__.py  compare_chrome.py  fingerprint_scanners.py  gen_report.py  manager_backend_scale.py  proxy_auth_relay.py  proxy_intelligence.py  proxy_quality.py  proxy_quality_models.py  proxy_site_checks.py
cloakbrowser/: __init__.py  __main__.py  browser.py  config.py  download.py  geoip.py  license.py  session.py  widevine.py
cloud/: Caddyfile  Dockerfile  README.md  __init__.py  admin.py  alembic.ini  app.py  audit.py  config.py  db.py  deps.py  docker-compose.yml  email.py  entitlements.py  errors.py  keys.py  licensing.py  models.py  passwords.py  requirements.txt  schemas.py  throttle.py  tokens.py
docs/: CODEBASE_FUNCTIONALITY.md  COMPETITOR_FUNCTIONALITY_MATRIX.md  PROFILE_FIELD_CAPABILITY_MATRIX.md  backend-contract-automation.md  backend-contract-backups.md  backend-contract-media-engine.md  backend-contract-proxy-providers.md  backend-contract-resource-monitor.md  backend-contract-session-history.md  backend-contract-shopify-builder.md  frontend-backend-contract-questions.md
dotnet/: .gitignore  CloakBrowser.sln  README.md
examples/: recaptcha_score.py  stealth_test.py
js/: README.md  package-lock.json  (+2 more)
src-tauri/: Cargo.toml  nsis-hooks.nsh  plasma-backend.spec  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+685 files in other folders)
