[package]
name = "plasma"
version = "1.0.0"
description = "Plasma desktop shell"
edition = "2021"
rust-version = "1.77"

[lib]
name = "plasma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
hex = "0.4"
tokio = { version = "1", features = ["time"] }

[features]
# tauri-cli passes --features custom-protocol on `tauri build`
custom-protocol = ["tauri/custom-protocol"]
