[package]
name = "plasma"
version = "1.0.0"
description = "Plasma desktop shell"
edition = "2021"
rust-version = "1.77"

# Desktop-only binary crate: everything lives in src/main.rs, so there is no [lib]
# target (the mobile-style staticlib/cdylib lib isn't needed for a Windows build).

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
hex = "0.4"
tokio = { version = "1", features = ["time"] }

[features]
# tauri-cli passes --features custom-protocol on `tauri build`
custom-protocol = ["tauri/custom-protocol"]
